--- a/user-management/src/App.css
+++ b/user-management/src/App.css
@@ -1,38 +1,80 @@
-.App {
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-size: cover;
+  background-position: center;
+}
+
+.blur-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(5px); /* Efekt blur pouze pro tento prvek */
+  z-index: -1; /* Zařadíme tento prvek za ostatní obsah */
+}
+
+#login-section {
+  max-width: 400px;
+  margin: 100px auto; /* Posune formulář doprostřed stránky */
+  padding: 20px;
+  background-image: url('https://www.egnyte.com/sites/default/files/inline-images/The%20expansion%20of%20cloud%20applications%20has%20added%20to....png'); /* Nastavte vaši pozadíovou fotku */
+  background-size: cover;
+  background-position: center;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#login-section h2 {
+  margin-top: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#login-section img {
+  width: 80px; /* Velikost obrázku uživatele */
+  margin-bottom: 20px; /* Mezera pod obrázkem */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+#login-form label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+#login-form input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+#login-form button {
+  width: 100%;
+  background-color: #4CAF50;
   color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 3px;
+  font-size: 16px;
 }
 
-.App-link {
-  color: #61dafb;
+#login-form button:hover {
+  background-color: #45a049;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#login-form button:disabled {
+  background-color: #ddd;
+  cursor: not-allowed;
+}
+
+.main-page {
+  background-image: none; /* Zrušíme pozadí s obrázkem */
+}
+
+.content {
+  /* CSS pro obsah */
 }
