--- a/user-management/src/components/MainPage.css
+++ b/user-management/src/components/MainPage.css
@@ -10,8 +10,8 @@
 
 
 .header {
-  background-color: #4CAF50;
-  color: white;
+  background-color: #4ba632;
+  color: rgb(255, 255, 255);
   padding: 10px;
   text-align: center;
   width: 100%;
